--- a/package.json
+++ b/package.json
@@ -28,16 +28,18 @@
     "bs-ngx-houratday-picker": "1.1.0",
     "bs-ngx-pagination": "0.0.7",
     "core-js": "^2.6.4",
+    "file-saver": "^2.0.1",
     "ng2-charts": "^1.6.0",
     "ng2-ckeditor": "^1.2.2",
     "ngx-mat-select-search": "^1.5.2",
     "rxjs": "~6.3.3",
     "sweetalert2": "^7.33.1",
     "verzth-tcx-js-angular": "0.0.3-a",
+    "xlsx": "^0.14.2",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.10.7",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^7.3.1",
     "@angular/compiler-cli": "^7.2.4",
     "@angular/language-service": "^7.2.4",
