--- a/package.json
+++ b/package.json
@@ -11,67 +11,68 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.4",
-    "@angular/cdk": "^7.3.2",
-    "@angular/common": "^7.2.4",
-    "@angular/compiler": "^7.2.4",
-    "@angular/core": "^7.2.4",
-    "@angular/forms": "^7.2.4",
-    "@angular/http": "^7.2.4",
-    "@angular/material": "^7.3.2",
-    "@angular/platform-browser": "^7.2.4",
-    "@angular/platform-browser-dynamic": "^7.2.4",
-    "@angular/router": "^7.2.4",
-    "@ckeditor/ckeditor5-angular": "^1.0.1",
+    "@angular/animations": "^7.2.16",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.16",
+    "@angular/compiler": "^7.2.16",
+    "@angular/core": "^7.2.16",
+    "@angular/forms": "^7.2.16",
+    "@angular/http": "^7.2.16",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.16",
+    "@angular/platform-browser-dynamic": "^7.2.16",
+    "@angular/router": "^7.2.16",
+    "@ckeditor/ckeditor5-angular": "^1.1.2",
     "@ckeditor/ckeditor5-build-classic": "^11.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "bs-ngx-houratday-picker": "1.1.0",
     "bs-ngx-pagination": "0.0.7",
-    "core-js": "^2.6.4",
-    "file-saver": "^2.0.1",
+    "core-js": "^2.6.11",
+    "file-saver": "^2.0.2",
     "ng2-charts": "^1.6.0",
-    "ng2-ckeditor": "^1.2.2",
-    "ngx-mat-select-search": "^1.5.2",
+    "ng2-ckeditor": "^1.2.6",
+    "ngx-mat-select-search": "^1.8.0",
+    "ngx-tcx": "^0.2.1",
     "rxjs": "~6.3.3",
     "sweetalert2": "^7.33.1",
-    "verzth-tcx-js-angular": "0.0.3-a",
-    "xlsx": "^0.14.2",
-    "zone.js": "^0.8.29"
+    "xlsx": "^0.14.5",
+    "zone.js": "^0.8.29",
+    "crypto-js": "^3.1.9-1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.8",
-    "@angular/cli": "^7.3.1",
-    "@angular/compiler-cli": "^7.2.4",
-    "@angular/language-service": "^7.2.4",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.16",
+    "@angular/language-service": "^7.2.16",
     "@types/jasmine": "^2.8.16",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/jquery": "^3.3.29",
-    "@types/node": "^8.10.40",
-    "bootstrap": "^4.3.1",
-    "bootstrap-colorpicker": "^3.0.3",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/jquery": "^3.3.31",
+    "@types/node": "^8.10.59",
+    "bootstrap": "^4.4.1",
+    "bootstrap-colorpicker": "^3.2.0",
     "bootstrap-tagsinput": "^0.7.1",
-    "chart.js": "^2.7.3",
+    "chart.js": "^2.9.3",
     "codelyzer": "~4.5.0",
-    "datatables.net-bs4": "^1.10.19",
+    "datatables.net-bs4": "^1.10.20",
     "dropzone": "^5.5.1",
-    "echarts": "^4.2.0-rc.2",
+    "echarts": "^4.6.0",
     "flot-charts": "^0.8.3",
     "font-awesome": "^4.7.0",
-    "fullcalendar": "^3.10.0",
-    "inputmask": "^4.0.6",
-    "ion-rangeslider": "^2.3.0",
+    "fullcalendar": "^3.10.1",
+    "inputmask": "^4.0.9",
+    "ion-rangeslider": "^2.3.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "jquery-countdown": "^2.2.0",
-    "jquery-datetimepicker": "^2.5.20",
+    "jquery-datetimepicker": "^2.5.21",
     "jquery-knob": "^1.2.11",
     "jquery-sparkline": "^2.4.0",
     "jquery-ui-dist": "^1.12.1",
     "jqvmap": "^1.5.1",
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lightslider": "^1.1.6",
@@ -80,15 +81,15 @@
     "morris-js-module": "^1.2.1",
     "morris.js": "^0.5.0",
     "ng-pick-datetime": "^7.0.0",
-    "ngx-cookie-service": "^2.1.0",
+    "ngx-cookie-service": "^2.3.0",
     "nprogress": "^0.2.0",
-    "popper.js": "^1.14.7",
+    "popper.js": "^1.16.0",
     "protractor": "^5.4.2",
     "require.js": "^1.0.0",
-    "select2": "^4.0.6-rc.1",
+    "select2": "^4.0.12",
     "smartwizard": "^4.3.1",
     "toastr": "^2.1.4",
-    "trumbowyg": "^2.14.0",
+    "trumbowyg": "^2.21.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1"
