--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@ckeditor/ckeditor5-angular": "^1.1.2",
     "@ckeditor/ckeditor5-build-classic": "^11.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.2.2",
+    "@verzth/ngx-bootstrap-pagination": "^2.0.0",
     "bs-ngx-houratday-picker": "1.1.0",
-    "bs-ngx-pagination": "0.0.7",
     "core-js": "^2.6.11",
+    "crypto-js": "^3.1.9-1",
     "file-saver": "^2.0.2",
     "ng2-charts": "^1.6.0",
     "ng2-ckeditor": "^1.2.6",
@@ -36,8 +37,7 @@
     "rxjs": "~6.3.3",
     "sweetalert2": "^7.33.1",
     "xlsx": "^0.14.5",
-    "zone.js": "^0.8.29",
-    "crypto-js": "^3.1.9-1"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
