--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ng2-ckeditor": "^1.2.6",
     "ngx-mat-select-search": "^1.8.0",
     "ngx-tcx": "^0.2.1",
+    "node-sass": "^4.13.1",
     "rxjs": "~6.3.3",
     "sweetalert2": "^7.33.1",
     "xlsx": "^0.14.5",
